@@ -387,6 +387,7 @@
             --add-opens=java.base/java.util=ALL-UNNAMED
             --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
             --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+            --add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp.datatype=ALL-UNNAMED
         </surefire.arglineopen>
 	</properties>
 
@@ -400,7 +401,7 @@
 			    <artifactId>rdf4j-repository-sparql</artifactId>
 			    <version>${rdf4j.version}</version> <!-- or latest 4.x -->
 			  </dependency>
-			
+
 			  <dependency>
 			    <groupId>org.eclipse.rdf4j</groupId>
 			    <artifactId>rdf4j-repository-api</artifactId>
